# replay

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.beads/: config.yaml  metadata.json
.claude/memory/: feedback_no_degrade.md
crates/pty/: Cargo.toml  NOTICE
experiments/: 1-board.py
experiments/board/: DESIGN.md  NOTES.md  README.md  __init__.py  agent.py  board.py  coordinator.py  events.py  sim.py  workspace.py
src/: agent.rs  ansi.rs  app.rs  beads.rs  clipboard.rs  compact.rs  config.rs  coordinator.rs  display.rs  engine.rs  highlight.rs  light_tools.rs  main.rs  markdown.rs  mem.rs  models.rs  process_manager.rs  provider_pressure.rs  session.rs  skills.rs  spawn_tool.rs  steering.rs  subagent.rs  survey_ui.rs  throbber.rs  voice.rs
src/tui/: menu.rs  mod.rs  screen.rs
tests/: beads_test.rs
