[workspace]
members = ["."]

[package]
name = "replay"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Self-improving software orchestration"

[dependencies]
anyhow = "1"
crossterm = "0.28"
dotenvy = "0.15"
gilrs = "0.10"
llm-code-sdk = { path = "../llm-code-sdk", features = ["smart"] }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termimad = "0.34.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
