[workspace]
members = ["."]

[package]
name = "replay"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Self-improving software orchestration"

[dependencies]
anyhow = "1"
chrono = "0.4.44"
cpal = "0.17.3"
crossterm = "0.28"
dirs = "6.0.0"
dotenvy = "0.15"
flate2 = "1"
futures-util = "0.3"
gilrs = "0.10"
hound = "3.5.1"
llm-code-sdk = { path = "../llm-code-sdk", features = ["smart", "search"] }
pulldown-cmark = "0.13.3"
ratatui = "0.30"
reqwest = { version = "0.12", features = ["json", "stream"] }
rustyline = "17.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
termimad = "0.34.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
transcribe-rs = { version = "0.2.9", features = ["parakeet"] }
