[package]
name = "replay-pty"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "PTY and pipe process spawning for Replay. Vendored from codex-utils-pty (OpenAI Codex, Apache-2.0)."

[dependencies]
anyhow = "1"
portable-pty = "0.9"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
pretty_assertions = "1"

[target.'cfg(windows)'.dependencies]
filedescriptor = "0.8.3"
lazy_static = "1"
log = "0.4"
shared_library = "0.1.9"
winapi = { version = "0.3.9", features = [
    "handleapi",
    "minwinbase",
    "processthreadsapi",
    "synchapi",
    "winbase",
    "wincon",
    "winerror",
    "winnt",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
